--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "@tanstack/react-query": "^5.59.19",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.10.2",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.4",
     "swiper": "^11.1.14"
