--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.59.19",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.10.2",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
@@ -23,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
